cluster-bootstrap/k8s-resources/istio/virtual-services/istio-vs-argocd.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-vs-argocd
  namespace: argocd
spec:
  hosts:
  - HOSTNAME
  gateways:
  - istio-system/istio-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
