cluster-bootstrap/k8s-resources/istio/virtual-services/istio-vs-console.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-vs-console
  namespace: ai-agent
spec:
  hosts:
  - HOSTNAME
  gateways:
  - istio-system/istio-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ai-agent-frontend
        port:
          number: 8080
