cluster-bootstrap/k8s-resources/istio/virtual-services/istio-vs-grafana.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: istio-vs-grafana
  namespace: monitoring
spec:
  hosts:
  - HOSTNAME
  gateways:
  - istio-system/istio-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana
        port:
          number: 80
